--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -1033,7 +1033,7 @@ as each \emph{publication} can only have \emph{author} relationships to \emph{pe
 \label{RDF-Validation-Requirements-without-Reasoning}
 
 For the majority of the constraint types, reasoning is not needed to be performed prior to validation. 
-It is possible, however, to reason before validating constraints for which reasoning does not affect validation results.
+It is possible, however, to execute reasoning before validating constraints for which reasoning does not affect validation results.
 %\textbf{Expressible by OWL 2.}
 %\label{sec:RDF-validation-requirements-without-reasoning-2}
 %\textbf{Literal Pattern Matching}\footnote{corresponds to R-44-PATTERN-MATCHING-ON-RDF-LITERALS}\textbf{.} 
