--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -775,7 +775,7 @@ As a result of its expressive power, OWL 2 DL allows a large variety of sophisti
 	%\item constraints only expressible by other constraint languages
 %\end{itemize}
 For this paper, we identified in total 74 requirements to formulate RDF constraints; each of them corresponding to a constraint type. 
-We recently published a technical report\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} (serving as appendix of this paper) in which we explain each requirement/constraint type in detail and in which we give examples for each (represented by listed constraint languages).
+We recently published a technical report\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} (serving as appendix of this paper) in which we explain each requirement/constraint type in detail and give examples for each (represented by listed constraint languages).
 This technical report also contains mappings to DL to logically underpin each requirement and to determine which DL constructs are needed to express each constraint type \cite{BoschNolleAcarEckert2015}.
 %When the DL constructs  which are needed to express a particular constraint are known, the required expressivity and the computational complexity to perform reasoning for that constraint can be determined. 
 %The constraint \ms{Context-Specific Exclusive OR of Properties} (see section~\ref{sec:RDF-validation-requirements-without-reasoning-2}), e.g., can generically be expressed as follows:
@@ -790,12 +790,12 @@ This technical report also contains mappings to DL to logically underpin each re
 %The DL constructs \ms{property inclusion}, \ms{complement}, \ms{intersection}, \ms{union}, and \ms{existential restriction} are used to express this constraint.  
 % As existential restrictions are part of OWL 2 DL reasoning, the constraint's complexity is \textsc{N2exptime}.
 % \er{Now computational complexity? Existential restrictions are not necessarily \textsc{N2Exptime}}
-The subsequent steps are needed to determine the performance (i.e. computational complexity) to validate simple (atomic) and complex (composed) constraint types:
+The subsequent steps are needed to have an idea about the performance (i.e. computational complexity) to validate simple (atomic) and complex (composed) constraint types:
 \begin{enumerate}
 	\item As reasoning may be performed as a pre-validation step, we determine for each constraint type if it makes sense to perform reasoning prior to validation.
-	\item When combining reasoning and validation, the distinction if it makes a difference if the CWA/UNA (by CWA/UNA, we mean CWA with UNA) or the OWA/nUNA is assumed is a very important aspect. Thus, we evaluate each constraint type regarding the CWA/UNA dependency.
-	\item As validation can be performed without reasoning, but also by means of different reasoning types, we assign each constraint type to a validation type (which is associated with a particular complexity class).
-	\item The combination of DL constructs of a constraint type determines its complexity. By mapping each constraint type to DL and as the complexity of DL constructs are known (some DL constructs are only expressible by particular OWL 2 profiles which are associated with a given complexity class), we get an idea of the complexity for each constraint type in worst case.
+	\item When combining reasoning and validation, the distinction between the CWA with UNA (CWA/UNA ) or the OWA without UNA (OWA/nUNA)  is an important aspect. Thus, we evaluate each constraint type regarding the CWA/UNA dependency.
+	\item  Since reasoning makes difference  for some validation types, we note them with the computational complexity  of  the language that they are expressed in.
+	\item Since the combination of DL constructs of a constraint type determines its complexity,  by mapping each constraint we get an idea of the complexity for each constraint type in worst case.
 \end{enumerate}
 
 \subsection{Dependency on CWA with UNA}
@@ -816,7 +816,7 @@ $\overline{\mathcal{C}_{CWA}}$ includes constraint types for which it does not m
 For this {\em disjoint classes} constraint, it does not make any difference if the CWA/UNA or the OWA/nUNA semantics is taken,
 as all information needed for validation is explicitly available in both cases. 
 
-For this paper, we evaluated for each constraint type (74 in total) if it is dependent or independent on the CWA/UNA (for a detailed analysis see \cite{BoschNolleAcarEckert2015}). 
+For this work, following the similar fashion, we evaluated for each constraint type (74 in total) if it is dependent or independent on the CWA/UNA (for a detailed analysis see \cite{BoschNolleAcarEckert2015}). 
 The result of this evaluation is that we distinguish between 42 $\mathcal{C}_{CWA}$ constraint types and 32 $\overline{\mathcal{C}_{CWA}}$ constraint types.
 Hence, for the majority of constraint types it makes a difference if the CWA/UNA or the OWA/nUNA is assumed.
 
